app/css/home.css
@import "util/reset.css";
@import "util/palette.css";
@import "util/font-k2d.css";
@import "elements/cube-controls.css";

body {
  background-color: var(--color-dark);
}

#cube-box {
  --outer-dim: 350px;
  --inner-dim: 200px;
}

@media (min-width: 450px) {
  #cube-box {
    --outer-dim: 450px;
    --inner-dim: 250px;
  }
}

#cube-box {
  --half-dim: calc(var(--inner-dim) / 2);
  --neg-dim: calc(var(--inner-dim) * -0.5);
  --offset: calc((var(--outer-dim) - var(--inner-dim)) / 2);

  position: relative;
  width: var(--outer-dim);
  height: var(--outer-dim);
  perspective: 2000px;
  background-color: transparent;
  margin: auto;
  top: calc(50vh - var(--outer-dim) / 2);
}

#cube-rotator {
  position: relative;
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transform: rotateX(-15deg) rotateY(-15deg);
}

.cb-face {
  position: absolute;
  width: var(--inner-dim);
  height: var(--inner-dim);
  background-color: var(--color-back);
  border: 2px solid var(--color-dark);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  user-select: none;
  padding: max(0px, calc((var(--inner-dim) - 200px) / 2));
  box-sizing: border-box;
}

.cb-face-content {
  position: relative;
  width: 200px;
  height: 200px;
  color: var(--color-light);

  p,
  h1 {
    position: absolute;
    text-align: center;
    font-size: clamp(14px, 2vw, 15px);
    line-height: normal;
    color: var(--color-light);

    a {
      color: var(--color-light);
      text-decoration-line: underline;
    }
  }

  canvas {
    position: absolute;
    top: 0;
    left: 0;
    width: 184px;
    height: 184px;
    background-color: var(--color-dark);
    margin: 8px;
  }

  img {
    position: absolute;
    top: 5px;
    left: 5px;
    width: 190px;
    height: 190px;
    border-radius: 100px;
    object-fit: cover;
    user-select: none;
    pointer-events: none;
  }
}

.cb-content-text {
  p {
    left: 10px;
    top: 10px;
    width: 180px;
    height: 180px;
  }
}

.cb-content-section {
  h1 {
    left: 10px;
    top: 10px;
    width: 180px;
    height: 40px;
    font-size: clamp(24px, 6vw, 32px);
  }

  p,
  .cb-content {
    position: absolute;
    left: 10px;
    top: 50px;
    width: 180px;
    height: 130px;
    font-size: clamp(14px, 2vw, 15px);
  }

  .cb-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;

    .cb-link-pill {
      display: flex;
      height: 40px;
      width: 140px;
      justify-content: center;
      align-items: center;
      gap: 10px;
      padding: 0 5px;
      flex-shrink: 0;
      font-size: clamp(15px, 2vw, 16px);
      border-radius: 10px;
      background-color: var(--color-dark);

      a {
        height: 32px;
        width: 32px;
      }
    }

    span {
      display: flex;
      height: 24px;
      text-align: center;
      line-height: normal;
      font-size: clamp(14px, 2vw, 16px);
      color: var(--color-light);
      text-decoration: none;
      text-decoration-line: none;
    }
  }
}

#cb-front {
  transform: translate3d(var(--offset), var(--offset), var(--half-dim))
    rotateY(0deg);
}

#cb-back {
  transform: translate3d(var(--offset), var(--offset), var(--neg-dim))
    rotateY(180deg);
}

#cb-left {
  transform: translate3d(
      calc(var(--offset) - var(--half-dim)),
      var(--offset),
      0px
    )
    rotateY(-90deg);
}

#cb-right {
  transform: translate3d(
      calc(var(--half-dim) + var(--offset)),
      var(--offset),
      0px
    )
    rotateY(90deg);
}

#cb-top {
  transform: translate3d(
      var(--offset),
      calc(var(--offset) - var(--half-dim)),
      0px
    )
    rotateX(90deg);
}

#cb-bottom {
  transform: translate3d(
      var(--offset),
      calc(var(--half-dim) + var(--offset)),
      0px
    )
    rotateX(-90deg);
}

